--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>HTML Úkol</title>
 </head>
 <body>
-    
+
+    <h1 id="nadpis">HTML & CSS</h1>
+
+    <h2>Tabulka</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Jméno</th>
+                <th>Věk</th>
+                <th>Město</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Alice</td>
+                <td>25</td>
+                <td>Praha</td>
+            </tr>
+            <tr>
+                <td>Jan</td>
+                <td>30</td>
+                <td>Brno</td>
+            </tr>
+            <tr>
+                <td>Eva</td>
+                <td>22</td>
+                <td>Ostrava</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Uspořádaný seznam</h2>
+    <ol>
+        <li>Jablka</li>
+        <li>Hrušky</li>
+        <li>Banány</li>
+    </ol>
+
+    <h2>Neuspořádaný seznam</h2>
+    <ul>
+        <li class="zvire">Pes</li>
+        <li>Kočka</li>
+        <li>Křeček</li>
+    </ul>
+
+    <h2>Formulář</h2>
+    <form action="#" method="post">
+        <label for="name">Jméno:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="gender">Pohlaví:</label><br>
+        <input type="radio" id="male" name="gender" value="muž">
+        <label for="male">Muž</label><br>
+        <input type="radio" id="female" name="gender" value="žena">
+        <label for="female">Žena</label><br>
+
+        <label for="country">Země:</label>
+        <select id="country" name="country">
+            <option value="cz">Česká republika</option>
+            <option value="sk">Slovensko</option>
+            <option value="pl">Polsko</option>
+        </select><br>
+
+        <label for="message">Zpráva:</label><br>
+        <textarea id="message" name="message" rows="4" cols="50"></textarea><br>
+
+        <input type="submit" value="Odeslat">
+    </form>
+
 </body>
 </html>
